--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -1,10 +1,24 @@
 <div class="h-full w-full">
     <div class="relative flex w-full flex-nowrap justify-start">
-        <div class="md:w-[5%] lg:w-[8.33%] xl:w-[10%]"></div>
-        <span class="font-roboto text-[13vw] uppercase leading-none tracking-tight text-gray-200 md:text-[7rem] pointer-events-none">Brotherland</span>
-        <div class="absolute mt-9 z-10 w-full">
+        <div class="hidden sm:block md:w-[5%] lg:w-[8.33%] xl:w-[10%]"></div>
+        <div
+            class="pointer-events-none w-fit font-roboto text-5xl uppercase leading-none tracking-tight text-gray-200 sm:w-full sm:text-[13vw] md:text-[7rem]"
+        >
+            Brotherland
+        </div>
+        <!-- Hamburger Menu -->
+        <div class="aspect-square w-[10%] sm:hidden">
+            <div class="flex h-full w-full flex-col items-center justify-evenly p-1">
+                <div class="h-[10%] w-full bg-gray-800"></div>
+                <div class="h-[10%] w-full bg-gray-800"></div>
+                <div class="h-[10%] w-full bg-gray-800"></div>
+            </div>
+        </div>
+
+        <!-- Desktop Menu -->
+        <div class="absolute z-10 mt-9 hidden w-full sm:block">
             <div class="mx-auto h-fit w-full border-y border-gray-700 bg-gray-300 bg-opacity-0">
-                <nav class="m-auto sm:w-full md:w-4/5 lg:w-2/3 xl:w-3/5 pointer-events-auto">
+                <nav class="pointer-events-auto m-auto sm:w-full md:w-4/5 lg:w-2/3 xl:w-3/5">
                     <div class="flex justify-between font-crimson-text text-2xl font-bold tracking-tight">
                         <a href="{{ pathPrefix }}/project.html" alt="Project">
                             <div
