--- a/src/css/main.css
+++ b/src/css/main.css
@@ -60,16 +60,24 @@ a {
 
 audio {
     filter: grayscale(1) saturate(500%) contrast(100%) invert(100%);
-       /* mix-blend-mode: multiply; */
-    /* width: 200px;
-    height: 25px; */
+    /* mix-blend-mode: multiply; */
 }
 
 @-moz-document url-prefix() {
     audio {
         filter: invert(0%);
-           /* mix-blend-mode: multiply; */
+        /* mix-blend-mode: multiply; */
     }
+}
+
+/* "Checkbox Hack" https://stackoverflow.com/a/48469407 : */
+
+#hamburger-menu-checkbox:checked ~ #hamburger-menu-panel {
+    @apply !flex;
+}
+
+#hamburger-menu-checkbox:checked ~ #hamburger-menu-lines > div {
+    @apply !ml-auto !w-1/2 !bg-red-800;
 }
 
 .cursor-ve {
