--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -1,17 +1,74 @@
 <div class="h-full w-full">
-    <div class="relative flex w-full flex-nowrap justify-start">
-        <div class="hidden sm:block md:w-[5%] lg:w-[8.33%] xl:w-[10%]"></div>
+    <div class="relative flex h-full w-full flex-nowrap justify-between sm:justify-start">
+        <div class="hidden sm:block sm:w-auto md:w-[5%] lg:w-[8.33%] xl:w-[10%]">
+            <!-- ^^^ Empty spacer on non-mobile -->
+        </div>
         <div
             class="pointer-events-none w-fit font-roboto text-5xl uppercase leading-none tracking-tight text-gray-200 sm:w-full sm:text-[13vw] md:text-[7rem]"
         >
             Brotherland
         </div>
         <!-- Hamburger Menu -->
-        <div class="aspect-square w-[10%] sm:hidden">
-            <div class="flex h-full w-full flex-col items-center justify-evenly p-1">
-                <div class="h-[10%] w-full bg-gray-800"></div>
-                <div class="h-[10%] w-full bg-gray-800"></div>
-                <div class="h-[10%] w-full bg-gray-800"></div>
+        <div class="relative mb-auto ml-auto mt-auto h-10 w-10 sm:hidden">
+            <div class="absolute right-0 top-0 h-full w-full p-1">
+                <input id="hamburger-menu-checkbox" type="checkbox" class="hidden" />
+                <label
+                    id="hamburger-menu-label"
+                    for="hamburger-menu-checkbox"
+                    class="absolute right-0 top-0 z-50 aspect-square h-full cursor-pointer"
+                >
+                </label>
+
+                <div id="hamburger-menu-lines" class="flex h-full flex-col justify-around">
+                    <div class="h-[14.285%] w-full rounded-sm bg-gray-200"></div>
+                    <div class="h-[14.285%] w-full rounded-sm bg-gray-200"></div>
+                    <div class="h-[14.285%] w-full rounded-sm bg-gray-200"></div>
+                </div>
+
+                <div
+                    id="hamburger-menu-panel"
+                    class="absolute right-0 top-full z-40 mb-6 hidden h-[50vh] flex-col items-end justify-evenly bg-white pb-2 pl-8 pr-1 pt-2 font-crimson-text text-2xl font-bold tracking-tight shadow-md"
+                >
+                    <a href="{{ pathPrefix }}/project.html" alt="Project">
+                        <div
+                            class="pl-4 pr-1 transition-colors ease-linear hover:bg-gray-400/50 hover:text-red-800 {{ active === 'project' ? 'bg-gray-600/75 text-gray-100' : ' text-red-800' }}"
+                        >
+                            Projekt
+                        </div>
+                    </a>
+
+                    <a href="{{ pathPrefix }}/interviews/intrvw_dhn01.html" alt="Interviews">
+                        <div
+                            class="pl-4 pr-1 transition-colors ease-linear hover:bg-gray-400/50 hover:text-red-800 {{ active.includes('intrvw') ? 'bg-gray-600/75 text-gray-100' : ' text-red-800' }}"
+                        >
+                            Interviews
+                        </div>
+                    </a>
+
+                    <a href="{{ pathPrefix }}/exhibits.html" alt="Exhibits">
+                        <div
+                            class="pl-4 pr-1 transition-colors ease-linear hover:bg-gray-400/50 hover:text-red-800 {{ active === 'exhibits' ? 'bg-gray-600/75 text-gray-100' : ' text-red-800' }}"
+                        >
+                            Ausstellungen
+                        </div>
+                    </a>
+
+                    <a href="{{ pathPrefix }}/book.html" alt="Book">
+                        <div
+                            class="pl-4 pr-1 transition-colors ease-linear hover:bg-gray-400/50 hover:text-red-800 {{ active === 'book' ? 'bg-gray-600/75 text-gray-100' : ' text-red-800' }}"
+                        >
+                            Buch
+                        </div>
+                    </a>
+
+                    <a href="{{ pathPrefix }}/about.html" alt="About">
+                        <div
+                            class="pl-4 pr-1 transition-colors ease-linear hover:bg-gray-400/50 hover:text-red-800 {{ active === 'about' ? 'bg-gray-600/75 text-gray-100' : ' text-red-800' }}"
+                        >
+                            Über uns
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
 
