--- a/src/css/main.css
+++ b/src/css/main.css
@@ -51,7 +51,7 @@
 }
 
 main {
-    @apply mx-auto px-2 pt-16 text-gray-900 sm:w-full md:w-5/6 lg:w-3/4 xl:w-2/3 2xl:w-3/5;
+    @apply mx-auto px-2 pt-7 text-gray-900 sm:w-full md:w-5/6 md:px-3 md:pt-16 lg:w-3/4 xl:w-2/3 2xl:w-3/5;
 }
 
 a {
